Refactor code structure for improved readability and maintainability

--- a/analyze.html
+++ b/analyze.html
@@ -150,7 +150,6 @@
             <h3 id="dataset-samples">Dataset Samples</h3>
             <div class="samples-container">
               <div class="sample-section">
-                <h4>Dataset Preview</h4>
                 <div class="table-container">
                   <div class="table-responsive">
                     <table class="data-table">
@@ -407,14 +406,84 @@
         <div class="data-visualization">
           <h2 id="data-visualization">Data Visualization</h2>
           <div class="visualization-container">
-            <div class="chart" id="age-distribution">
-              <!-- Age distribution chart will be rendered here -->
+            <div class="chart">
+              <h3>Distribution of Depression among Students</h3>
+              <img
+                src="static/dataset/plot_data/Distribution_of_Depression_among_Students.png"
+                alt="Distribution of Depression among Students"
+              />
             </div>
-            <div class="chart" id="gender-distribution">
-              <!-- Gender distribution chart will be rendered here -->
+            <div class="chart">
+              <h3>Depression Distribution by Gender</h3>
+              <img
+                src="static/dataset/plot_data/Depresssion_Distribution_by_Gender.png"
+                alt="Depression Distribution by Gender"
+              />
             </div>
-            <div class="chart" id="depression-factors">
-              <!-- Depression factors correlation chart will be rendered here -->
+            <div class="chart">
+              <h3>Depression Distribution by Sleep Duration</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Sleep_Duration.png"
+                alt="Depression Distribution by Sleep Duration"
+              />
+            </div>
+            <div class="chart">
+              <h3>Depression Distribution by City</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_City.png"
+                alt="Depression Distribution by City"
+              />
+            </div>
+            <div class="chart">
+              <h3>Depression Distribution by Degree</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Degree.png"
+                alt="Depression Distribution by Degree"
+              />
+            </div>
+            <div class="chart">
+              <h3>Depression Distribution by Dietary Habits</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Dietary_Habits.png"
+                alt="Depression Distribution by Dietary Habits"
+              />
+            </div>
+            <div class="chart">
+              <h3>Depression Distribution by Profession</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Profession.png"
+                alt="Depression Distribution by Profession"
+              />
+            </div>
+            <div class="chart">
+              <h3>
+                Depression Distribution by Family History of Mental Illness
+              </h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Family_History_of_Mental_Illness.png"
+                alt="Depression Distribution by Family History of Mental Illness"
+              />
+            </div>
+            <div class="chart">
+              <h3>Depression Distribution by Suicidal Thoughts</h3>
+              <img
+                src="static/dataset/plot_data/Depression_Distribution_by_Haveyoueverhadsuicidalthoughts.png"
+                alt="Depression Distribution by Suicidal Thoughts"
+              />
+            </div>
+            <div class="chart">
+              <h3>Distribution of Numerical Features</h3>
+              <img
+                src="static/dataset/plot_data/Distribution_of_Numerical_Features.png"
+                alt="Distribution of Numerical Features"
+              />
+            </div>
+            <div class="chart">
+              <h3>Feature Correlation Heatmap</h3>
+              <img
+                src="static/dataset/plot_data/heatmap.png"
+                alt="Feature Correlation Heatmap"
+              />
             </div>
           </div>
         </div>
@@ -442,8 +511,5 @@
     </main>
 
     <script src="js/script.js"></script>
-    <!-- Add chart.js or any other visualization library -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/analyze.js"></script>
   </body>
 </html>
