Refactor HTML files for improved structure and consistency. Updated navigation links to include 'Models & Results' in the header across multiple pages, and standardized self-closing tags in HTML. Enhanced readability of content in 'about.html', 'index.html', 'predict.html', and 'analyze.html' by adjusting formatting and indentation.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your website description">
-    <meta name="keywords" content="your, keywords, here">
-    <meta name="author" content="Your Name">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Your website description" />
+    <meta name="keywords" content="your, keywords, here" />
+    <meta name="author" content="Your Name" />
     <title>My Website</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div>
-            <ul>
-                <li><a href="." class="active">Home</a></li>
-                <li><a href="predict">Predict</a></li>
-                <li><a href="analyze">Analyze</a></li>
-                <li><a href="about">About</a></li>
-            </ul>
-            <button id="theme-toggle" aria-label="Toggle theme">
-                <img src="static/assets/sun.svg" class="sun-icon" alt="Light mode">
-                <img src="static/assets/moon.svg" class="moon-icon" alt="Dark mode">
-            </button>
-        </div>
+      <div>
+        <ul>
+          <li><a href="." class="active">Home</a></li>
+          <li><a href="predict">Predict</a></li>
+          <li><a href="analyze">Analyze</a></li>
+          <li><a href="train_results">Models & Results</a></li>
+          <li><a href="about">About</a></li>
+        </ul>
+        <button id="theme-toggle" aria-label="Toggle theme">
+          <img src="static/assets/sun.svg" class="sun-icon" alt="Light mode" />
+          <img src="static/assets/moon.svg" class="moon-icon" alt="Dark mode" />
+        </button>
+      </div>
     </header>
 
     <main>
-        <section id="home">
-            <h1>CS114 - Student Depression Prediction</h1>
-            <a href="predict" class="predict-button">Predict now</a>
-        </section>
+      <section id="home">
+        <h1>CS114 - Student Depression Prediction</h1>
+        <a href="predict" class="predict-button">Predict now</a>
+      </section>
     </main>
 
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
