--- a/about.html
+++ b/about.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About page">
-    <meta name="keywords" content="about, information">
-    <meta name="author" content="Your Name">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About page" />
+    <meta name="keywords" content="about, information" />
+    <meta name="author" content="Your Name" />
     <title>About - My Website</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div>
-            <ul>
-                <li><a href=".">Home</a></li>
-                <li><a href="predict">Predict</a></li>
-                <li><a href="analyze">Analyze</a></li>
-                <li><a href="about" class="active">About</a></li>
-            </ul>
-            <button id="theme-toggle" aria-label="Toggle theme">
-                <img src="static/assets/sun.svg" class="sun-icon" alt="Light mode">
-                <img src="static/assets/moon.svg" class="moon-icon" alt="Dark mode">
-            </button>
-        </div>
+      <div>
+        <ul>
+          <li><a href=".">Home</a></li>
+          <li><a href="predict">Predict</a></li>
+          <li><a href="analyze">Analyze</a></li>
+          <li><a href="train_results">Models & Results</a></li>
+          <li><a href="about" class="active">About</a></li>
+        </ul>
+        <button id="theme-toggle" aria-label="Toggle theme">
+          <img src="static/assets/sun.svg" class="sun-icon" alt="Light mode" />
+          <img src="static/assets/moon.svg" class="moon-icon" alt="Dark mode" />
+        </button>
+      </div>
     </header>
 
     <main>
-        <section id="about">
-            <h1>About Us</h1>
-            <p>This is the about page of your website. Here you can share information about yourself or your
-                organization.</p>
-        </section>
+      <section id="about">
+        <h1>About Us</h1>
+        <p>
+          This is the about page of your website. Here you can share information
+          about yourself or your organization.
+        </p>
+      </section>
     </main>
 
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
