--- a/predict.html
+++ b/predict.html
@@ -31,38 +31,65 @@
         <section id="predict">
             <h1>Predict Depression Risk</h1>
             <form id="prediction-form" class="multi-step-form">
+                <div class="form-group model-selection">
+                    <label for="model">Select Prediction Model</label>
+                    <select id="model" name="model" required>
+                        <option value="lg_sklearn">Logistic Regression - Sklearn</option>
+                        <option value="lg_scratch">Logistic Regression - Scratch</option>
+                        <option value="knn_sklearn">K-Nearest Neighbors - Sklearn</option>
+                        <option value="knn_scratch">K-Nearest Neighbors - Scratch</option>
+                        <option value="rf_sklearn">Random Forest - Sklearn</option>
+                        <option value="rf_scratch">Random Forest - Scratch</option>
+                        <option value="svm_sklearn">SVM - Sklearn</option>
+                        <option value="svm_scratch">SVM - Scratch</option>
+                    </select>
+                </div>
                 <div class="form-step active" data-step="1">
                     <h2>Personal Information</h2>
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="gender">Gender</label>
                             <select id="gender" name="gender" required>
-                                <option value="">Select gender</option>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                                <option value="other">Other</option>
+                                <option value="" disabled selected hidden>Select gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="age">Age</label>
-                            <input type="number" id="age" name="age" min="15" max="100" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="city">City</label>
-                            <input type="text" id="city" name="city" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="profession">Profession</label>
-                            <input type="text" id="profession" name="profession" required>
+                            <input type="number" id="age" name="age" min="1" max="100" required>
                         </div>
                         <div class="form-group full-width">
                             <label for="degree">Degree</label>
                             <select id="degree" name="degree" required>
-                                <option value="">Select degree</option>
-                                <option value="bachelor">Bachelor's</option>
-                                <option value="master">Master's</option>
-                                <option value="phd">PhD</option>
-                                <option value="other">Other</option>
+                                <option value="" disabled selected hidden>Select degree</option>
+                                <option value="B.Ed">Bachelor of Education</option>
+                                <option value="B.Com">Bachelor of Commerce</option>
+                                <option value="B.Arch">Bachelor of Architecture</option>
+                                <option value="BCA">Bachelor of Computer Applications</option>
+                                <option value="MSc">Master of Science</option>
+                                <option value="B.Tech">Bachelor of Technology</option>
+                                <option value="MCA">Master of Computer Applications</option>
+                                <option value="M.Tech">Master of Technology</option>
+                                <option value="BHM">Bachelor of Hotel Management</option>
+                                <option value="BSc">Bachelor of Science</option>
+                                <option value="M.Ed">Master of Education</option>
+                                <option value="B.Pharm">Bachelor of Pharmacy</option>
+                                <option value="M.Com">Master of Commerce</option>
+                                <option value="BBA">Bachelor of Business Administration</option>
+                                <option value="MBBS">Bachelor of Medicine, Bachelor of Surgery</option>
+                                <option value="LLB">Bachelor of Laws</option>
+                                <option value="BE">Bachelor of Engineering</option>
+                                <option value="BA">Bachelor of Arts</option>
+                                <option value="M.Pharm">Master of Pharmacy</option>
+                                <option value="MD">Doctor of Medicine</option>
+                                <option value="MBA">Master of Business Administration</option>
+                                <option value="MA">Master of Arts</option>
+                                <option value="PhD">Doctor of Philosophy</option>
+                                <option value="LLM">Master of Laws</option>
+                                <option value="MHM">Master of Hotel Management</option>
+                                <option value="ME">Master of Engineering</option>
+                                <option value="Others">Others</option>
                             </select>
                         </div>
                     </div>
@@ -72,33 +99,23 @@
                 </div>
 
                 <div class="form-step" data-step="2">
-                    <h2>Academic & Work Life</h2>
+                    <h2>Academic Life</h2>
                     <div class="form-grid">
                         <div class="form-group">
-                            <label for="academic_pressure">Academic Pressure (1-10)</label>
-                            <input type="range" id="academic_pressure" name="academic_pressure" min="1" max="10"
+                            <label for="academic_pressure">Academic Pressure (0-5)</label>
+                            <input type="range" id="academic_pressure" name="academic_pressure" min="0" max="5"
                                 required>
-                            <span class="range-value">5</span>
+                            <span class="range-value">3</span>
                         </div>
                         <div class="form-group">
-                            <label for="work_pressure">Work Pressure (1-10)</label>
-                            <input type="range" id="work_pressure" name="work_pressure" min="1" max="10" required>
-                            <span class="range-value">5</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="cgpa">CGPA</label>
-                            <input type="number" id="cgpa" name="cgpa" min="0" max="4" step="0.01" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="study_satisfaction">Study Satisfaction (1-10)</label>
-                            <input type="range" id="study_satisfaction" name="study_satisfaction" min="1" max="10"
+                            <label for="study_satisfaction">Study Satisfaction (0-5)</label>
+                            <input type="range" id="study_satisfaction" name="study_satisfaction" min="0" max="5"
                                 required>
-                            <span class="range-value">5</span>
+                            <span class="range-value">3</span>
                         </div>
-                        <div class="form-group">
-                            <label for="job_satisfaction">Job Satisfaction (1-10)</label>
-                            <input type="range" id="job_satisfaction" name="job_satisfaction" min="1" max="10" required>
-                            <span class="range-value">5</span>
+                        <div class="form-group full-width">
+                            <label for="cgpa">GPA (0-10)</label>
+                            <input type="number" id="cgpa" name="cgpa" min="0" max="10" step="0.01" required>
                         </div>
                     </div>
                     <div class="form-navigation">
@@ -118,7 +135,7 @@
                         <div class="form-group">
                             <label for="dietary_habits">Dietary Habits</label>
                             <select id="dietary_habits" name="dietary_habits" required>
-                                <option value="">Select dietary habits</option>
+                                <option value="" disabled selected hidden>Select dietary habits</option>
                                 <option value="healthy">Healthy</option>
                                 <option value="moderate">Moderate</option>
                                 <option value="unhealthy">Unhealthy</option>
@@ -127,12 +144,12 @@
                         <div class="form-group">
                             <label for="work_study_hours">Work/Study Hours per day</label>
                             <input type="number" id="work_study_hours" name="work_study_hours" min="0" max="24"
-                                required>
+                                step="0.5" required>
                         </div>
                         <div class="form-group">
-                            <label for="financial_stress">Financial Stress (1-10)</label>
-                            <input type="range" id="financial_stress" name="financial_stress" min="1" max="10" required>
-                            <span class="range-value">5</span>
+                            <label for="financial_stress">Financial Stress (0-5)</label>
+                            <input type="range" id="financial_stress" name="financial_stress" min="0" max="5" required>
+                            <span class="range-value">3</span>
                         </div>
                     </div>
                     <div class="form-navigation">
@@ -147,20 +164,17 @@
                         <div class="form-group">
                             <label for="suicidal_thoughts">Have you ever had suicidal thoughts?</label>
                             <select id="suicidal_thoughts" name="suicidal_thoughts" required>
-                                <option value="">Select an option</option>
-                                <option value="never">Never</option>
-                                <option value="rarely">Rarely</option>
-                                <option value="sometimes">Sometimes</option>
-                                <option value="often">Often</option>
+                                <option value="" disabled selected hidden>Select an option</option>
+                                <option value="Yes">Yes</option>
+                                <option value="No">No</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="family_history">Family History of Mental Illness</label>
                             <select id="family_history" name="family_history" required>
-                                <option value="">Select an option</option>
-                                <option value="none">None</option>
-                                <option value="distant">Distant relatives</option>
-                                <option value="immediate">Immediate family</option>
+                                <option value="" disabled selected hidden>Select an option</option>
+                                <option value="Yes">Yes</option>
+                                <option value="No">No</option>
                             </select>
                         </div>
                     </div>
