--- a/train_results.html
+++ b/train_results.html
@@ -104,14 +104,19 @@
   </head>
   <body>
     <header>
-      <div>
-        <ul>
-          <li><a href=".">Home</a></li>
-          <li><a href="predict">Predict</a></li>
-          <li><a href="analyze">Analyze</a></li>
-          <li><a href="train_results" class="active">Models & Results</a></li>
-          <li><a href="about">About</a></li>
-        </ul>
+      <div class="header-container">
+        <div class="logo">
+          <a href="index.html">🎓 <span>StudentDepression</span></a>
+        </div>
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="predict.html">Predict</a></li>
+            <li><a href="analyze.html">Analyze</a></li>
+            <li><a href="train_results.html">Models & Results</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </nav>
         <button id="theme-toggle" aria-label="Toggle theme">
           <img src="static/assets/sun.svg" class="sun-icon" alt="Light mode" />
           <img src="static/assets/moon.svg" class="moon-icon" alt="Dark mode" />
