Complete the Analyze, Models & Results section

--- a/analyze.html
+++ b/analyze.html
@@ -774,7 +774,7 @@
           </div>
         </div>
         <div
-          class="data-preprocessing"
+          class="preparation-summary"
           style="
             background-color: rgba(128, 128, 128, 0.05);
             border-radius: 12px;
@@ -783,7 +783,7 @@
             margin-top: 2rem;
           "
         >
-          <h2 id="data-preprocessing">Data Preprocessing</h2>
+          <h2 id="preparation-summary">Preparation Summary</h2>
           <ul>
             <li>
               <strong>Data type conversion:</strong> Categorical columns such as Gender, City, Profession, Dietary Habits, Degree, etc. were converted to <code>category</code> type to optimize memory and processing.
@@ -832,7 +832,7 @@
           <li>
             <a href="#EDA">EDA</a>
           </li>
-          <li><a href="#data-preprocessing">Data Preprocessing</a></li>
+          <li><a href="#preparation-summary">Preparation Summary</a></li>
         </ul>
       </aside>
     </main>
