--- a/predict.html
+++ b/predict.html
@@ -31,7 +31,7 @@
     <main>
         <section id="predict">
             <h1>Predict Depression Risk</h1>
-            <form id="prediction-form" class="multi-step-form">
+            <form id="prediction-form">
                 <div class="form-group model-selection">
                     <label for="model">Select Prediction Model</label>
                     <select id="model" name="model" required>
@@ -45,7 +45,8 @@
                         <option value="svm_scratch">SVM - Scratch</option>
                     </select>
                 </div>
-                <div class="form-step active" data-step="1">
+
+                <div class="form-section">
                     <h2>Personal Information</h2>
                     <div class="form-grid">
                         <div class="form-group">
@@ -94,23 +95,20 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-navigation">
-                        <button type="button" class="next-step">Next</button>
-                    </div>
                 </div>
 
-                <div class="form-step" data-step="2">
+                <div class="form-section">
                     <h2>Academic Life</h2>
                     <div class="form-grid">
                         <div class="form-group">
-                            <label for="academic_pressure">Academic Pressure (0-5)</label>
-                            <input type="range" id="academic_pressure" name="academic_pressure" min="0" max="5"
+                            <label for="academic_pressure">Academic Pressure (1-5)</label>
+                            <input type="range" id="academic_pressure" name="academic_pressure" min="1" max="5"
                                 required>
                             <span class="range-value">3</span>
                         </div>
                         <div class="form-group">
-                            <label for="study_satisfaction">Study Satisfaction (0-5)</label>
-                            <input type="range" id="study_satisfaction" name="study_satisfaction" min="0" max="5"
+                            <label for="study_satisfaction">Study Satisfaction (1-5)</label>
+                            <input type="range" id="study_satisfaction" name="study_satisfaction" min="1" max="5"
                                 required>
                             <span class="range-value">3</span>
                         </div>
@@ -119,27 +117,28 @@
                             <input type="number" id="cgpa" name="cgpa" min="0" max="10" step="0.01" required>
                         </div>
                     </div>
-                    <div class="form-navigation">
-                        <button type="button" class="prev-step">Previous</button>
-                        <button type="button" class="next-step">Next</button>
-                    </div>
                 </div>
 
-                <div class="form-step" data-step="3">
+                <div class="form-section">
                     <h2>Lifestyle & Health</h2>
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="sleep_duration">Sleep Duration (hours)</label>
-                            <input type="number" id="sleep_duration" name="sleep_duration" min="0" max="24" step="0.5"
-                                required>
+                            <select id="sleep_duration" name="sleep_duration" required>
+                                <option value="" disabled selected hidden>Select sleep duration</option>
+                                <option value="Less than 5 hours">Less than 5 hours</option>
+                                <option value="5-6 hours">5-6 hours</option>
+                                <option value="7-8 hours">7-8 hours</option>
+                                <option value="More than 8 hours">More than 8 hours</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="dietary_habits">Dietary Habits</label>
                             <select id="dietary_habits" name="dietary_habits" required>
                                 <option value="" disabled selected hidden>Select dietary habits</option>
-                                <option value="healthy">Healthy</option>
-                                <option value="moderate">Moderate</option>
-                                <option value="unhealthy">Unhealthy</option>
+                                <option value="Healthy">Healthy</option>
+                                <option value="Moderate">Moderate</option>
+                                <option value="Unhealthy">Unhealthy</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -148,18 +147,14 @@
                                 step="0.5" required>
                         </div>
                         <div class="form-group">
-                            <label for="financial_stress">Financial Stress (0-5)</label>
-                            <input type="range" id="financial_stress" name="financial_stress" min="0" max="5" required>
+                            <label for="financial_stress">Financial Stress (1-5)</label>
+                            <input type="range" id="financial_stress" name="financial_stress" min="1" max="5" required>
                             <span class="range-value">3</span>
                         </div>
                     </div>
-                    <div class="form-navigation">
-                        <button type="button" class="prev-step">Previous</button>
-                        <button type="button" class="next-step">Next</button>
-                    </div>
                 </div>
 
-                <div class="form-step" data-step="4">
+                <div class="form-section">
                     <h2>Mental Health History</h2>
                     <div class="form-grid">
                         <div class="form-group">
@@ -179,14 +174,28 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-navigation">
-                        <button type="button" class="prev-step">Previous</button>
-                        <button type="submit" class="submit-button">Submit</button>
-                    </div>
+                </div>
+
+                <div class="form-navigation">
+                    <button type="submit" class="submit-button">Submit</button>
                 </div>
             </form>
         </section>
     </main>
+
+    <!-- Prediction Result Modal -->
+    <div id="result-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-icon">
+                <img src="static/assets/check-circle.svg" alt="Positive Result" class="positive-icon"
+                    style="display: none;">
+                <img src="static/assets/x-circle.svg" alt="Negative Result" class="negative-icon"
+                    style="display: none;">
+            </div>
+            <p class="modal-message"></p>
+            <button class="modal-close">Close</button>
+        </div>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
