--- a/analyze.html
+++ b/analyze.html
@@ -10,6 +10,7 @@
     />
     <meta name="author" content="Your Name" />
     <title>Analyze - Student Depression Prediction</title>
+    <link rel="icon" href="static/assets/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/styles.css" />
     <style>
       .chart-analysis {
@@ -35,7 +36,7 @@
     <header>
       <div class="header-container">
         <div class="logo">
-          <a href="index.html">🎓 <span>StudentDepression</span></a>
+          <a href="index.html"><img src="static/assets/logo.svg" alt="Logo" width="32" height="32"> <span>StudentDepression</span></a>
         </div>
         <nav class="nav-menu">
           <ul>
