--- a/predict.html
+++ b/predict.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Prediction page" />
     <meta name="keywords" content="predict, forecast, analysis" />
     <meta name="author" content="Your Name" />
-    <title>Predict - My Website</title>
+    <title>Predict - Student Depression Prediction</title>
+    <link rel="icon" href="static/assets/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
@@ -14,7 +15,7 @@
     <header>
       <div class="header-container">
         <div class="logo">
-          <a href="index.html">🎓 <span>StudentDepression</span></a>
+          <a href="index.html"><img src="static/assets/logo.svg" alt="Logo" width="32" height="32"> <span>StudentDepression</span></a>
         </div>
         <nav class="nav-menu">
           <ul>
