Translate analysis content from Vietnamese to English for better accessibility

--- a/analyze.html
+++ b/analyze.html
@@ -738,19 +738,19 @@
               <p class="chart-analysis">
                 <ul>
                   <li>
-                    <strong>Age (Tuổi):</strong> Phổ tuổi sinh viên trải dài từ khoảng 18 đến 35, tập trung cao nhất vào nhóm 22–30 tuổi.
+                    <strong>Age:</strong> The age range of students spans from about 18 to 35, with the highest concentration in the 22–30 age group.
                   </li>
                   <li>
-                    <strong>Academic Pressure & Study Satisfaction:</strong> Cả hai biến này đều được tự đánh giá trên thang 1–5 và phân bố tương đối đều, với đỉnh nhẹ ở mức 3–4.
+                    <strong>Academic Pressure & Study Satisfaction:</strong> Both variables are self-rated on a 1–5 scale and are relatively evenly distributed, with a slight peak at levels 3–4.
                   </li>
                   <li>
-                    <strong>CGPA:</strong> Điểm trung bình tích lũy dao động trong khoảng 5.0–10.0, với số lượng lớn sinh viên đạt CGPA quanh 7–9.
+                    <strong>CGPA:</strong> The cumulative GPA ranges from 5.0 to 10.0, with most students achieving a CGPA around 7–9.
                   </li>
                   <li>
-                    <strong>Work/Study Hours:</strong> Giờ học/việc mỗi ngày phân bố từ 0–12 giờ, với đỉnh mạnh nhất tại 10–12 giờ/ngày, cho thấy nhiều bạn dành khá nhiều thời gian cho học và làm thêm.
+                    <strong>Work/Study Hours:</strong> Daily study/work hours range from 0 to 12 hours, with the strongest peak at 10–12 hours/day, indicating many students spend a significant amount of time on study and part-time work.
                   </li>
                   <li>
-                    <strong>Work Pressure & Job Satisfaction:</strong> Cả hai biến này chỉ có giá trị duy nhất (gần như đều = 0) trên toàn bộ mẫu, tức không chứa thông tin phân biệt. Do đó nên loại bỏ (drop) hai biến này trước khi huấn luyện mô hình vì chúng không đóng góp gì về mặt dự báo.
+                    <strong>Work Pressure & Job Satisfaction:</strong> Both variables have only a single value (almost always = 0) across the entire sample, meaning they do not provide any distinguishing information. Therefore, these variables should be dropped before model training as they do not contribute to prediction.
                   </li>
                 </ul>
               </p>
