--- a/train_results.html
+++ b/train_results.html
@@ -334,30 +334,13 @@
           <div class="model-metrics-group">
             <div>
               <h5>Scikit-learn Implementation</h5>
-              <pre class="classification-report">
-              precision    recall  f1-score   support
-
-           0       0.83      0.80      0.81      2268
-           1       0.87      0.88      0.87      3301
-
-    accuracy                           0.85      5569
-   macro avg       0.85      0.84      0.84      5569
-weighted avg       0.85      0.85      0.85      5569
-                </pre>
+              <img src="static/dataset/results/models/logreg_sklearn.png" alt="Logistic Regression (sklearn)" />
             </div>
             <div>
               <h5>Scratch Implementation</h5>
-              <pre class="classification-report">
-              precision    recall  f1-score   support
-
-           0       0.83      0.80      0.82      2268
-           1       0.87      0.88      0.88      3301
-
-    accuracy                           0.85      5569
-   macro avg       0.85      0.84      0.85      5569
-weighted avg       0.85      0.85      0.85      5569
-                </pre>
+              <img src="static/dataset/results/models/logreg_scratch.png" alt="Logistic Regression (scratch)" />
             </div>
+
           </div>
           <h4>ROC Curve Analysis</h4>
           <div class="visualization-group">
