add class 12 to degree options

--- a/predict.html
+++ b/predict.html
@@ -205,6 +205,7 @@
                                 <option value="LLM">Master of Laws</option>
                                 <option value="MHM">Master of Hotel Management</option>
                                 <option value="ME">Master of Engineering</option>
+                                <option value="Class 12">Class 12</option>
                                 <option value="Others">Others</option>
                             </select>
                         </div>
